--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,6 @@ steps:
   inputs:
     version: 'latest'
     connectionString: 'Server=tcp:grover-central-reporting.database.windows.net,1433;Initial Catalog=CentralReporting;Persist Security Info=False;User ID=Importer;Password=./~N^ntdgd7wWkSb;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
-    workspacePath: 'https://github.com/jwarren01/Test.git $(Build.SourcesDirectory)\Test\Test.txt'
+    workspacePath: '$(Build.SourcesDirectory)\Test\Test'
     targetPlatform: 'SqlServer'
     additionalArguments: '--debug'
