--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,13 @@ steps:
 - task: CmdLine@2
   inputs:
     script: 'git clone https://github.com/jwarren01/Test.git $(Build.SourcesDirectory)\Test'
+- task: UseYuniqlCLI@1
+  inputs:
+    version: 'latest'
 - task: RunYuniqlCLI@1
   inputs:
     version: 'latest'
-    connectionString: 'Server=tcp:grover-central-reporting.database.windows.net,1433;Initial Catalog=CentralReporting;Persist Security Info=False;User ID=Importer;Password=./~N^ntdgd7wWkSb;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
-    workspacePath: '$(Build.SourcesDirectory)\Test\'
+    connectionString: 'Server=tcp:grover-central-reporting.database.windows.net,1433;Initial Catalog=CentralReporting;Persist Security Info=False;User ID=dbadmin;Password=4E(2Y9VB7!w)/]uS;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
+    workspacePath: '$(Build.SourcesDirectory)\Test'
     targetPlatform: 'SqlServer'
     additionalArguments: '--debug'
