Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: CmdLine@2
   inputs:
-    script: 'git clone https://github.com/jwarren01/Test.git $(Build.SourcesDirectory)\Test'
+    script: 'git clone https://jwarren0022@dev.azure.com/jwarren0022/jwarren/_git/Test'
 - task: UseYuniqlCLI@1
   inputs:
     version: 'latest'
@@ -20,6 +20,6 @@ steps:
   inputs:
     version: 'latest'
     connectionString: 'Server=tcp:grover-central-reporting.database.windows.net,1433;Initial Catalog=CentralReporting;Persist Security Info=False;User ID=dbadmin;Password=4E(2Y9VB7!w)/]uS;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
-    workspacePath: '$(Build.SourcesDirectory)\Test'
+    workspacePath: 'https://jwarren0022@dev.azure.com/jwarren0022/jwarren/_git/Test'
     targetPlatform: 'SqlServer'
     additionalArguments: '--debug'
